Reviewed new language features and deprecations
This is really a bunch of small not-very-related changes