@@ -1162,7 +1162,7 @@ public class SpallocProperties {
 		 * @return The application installation identity.
 		 */
 		public String getId() {
-			return id == null ? null : id.trim();
+			return id == null ? null : id.strip();
 		}
 
 		void setId(String id) {
@@ -1176,7 +1176,7 @@ public class SpallocProperties {
 		 * @return The application installation secret.
 		 */
 		public String getSecret() {
-			return secret == null ? null : secret.trim();
+			return secret == null ? null : secret.strip();
 		}
 
 		void setSecret(String secret) {
@@ -1275,8 +1275,8 @@ public class SpallocProperties {
 		@AssertTrue(
 				message = "id and secret must be given if OpenID is enabled")
 		private boolean isValid() {
-			return !enable || (nonNull(id) && !id.trim().isEmpty()
-					&& nonNull(secret) && !secret.trim().isEmpty());
+			return !enable || (nonNull(id) && !id.isBlank()
+					&& nonNull(secret) && !secret.isBlank());
 		}
 	}
 
@@ -1955,7 +1955,7 @@ public class SpallocProperties {
 				+ "if the v1 service is enabled")
 		private boolean isValidUserIfEnabled() {
 			return !enable
-					|| (nonNull(serviceUser) && !serviceUser.trim().isEmpty());
+					|| (nonNull(serviceUser) && !serviceUser.isBlank());
 		}
 
 		/**
@@ -1978,7 +1978,7 @@ public class SpallocProperties {
 				+ "if the v1 service is enabled")
 		private boolean isValidGroupIfEnabled() {
 			return !enable || (nonNull(serviceGroup)
-					&& !serviceGroup.trim().isEmpty());
+					&& !serviceGroup.isBlank());
 		}
 
 		/**
